# image-2-gui

./: .gitignore  README.md  gpt_image2_windows_gui_agent_plan.md  pyproject.toml
app/: api_capabilities.json
app/cli/: main.py
app/core/: api_capabilities.py  batch_engine.py  command_builder.py  config.py  cost_estimator.py  errors.py  event_protocol.py  file_scanner.py  manifest_store.py  models.py  openai_image_client.py  output_planner.py  output_writer.py  prompt_renderer.py  task_planner.py
app/presentation/: __init__.py  gui_app.py
examples/: README.md  example.config.json
scripts/: build_windows.ps1
tests/: conftest.py  test_batch_engine.py  test_cli.py  test_cli_runner.py  test_command_builder.py  test_config_validation.py  test_cost_estimator.py  test_event_protocol.py  test_examples_docs.py  test_file_scanner.py  test_gui_command.py  test_manifest_resume.py  test_openai_image_client.py  test_output_planner.py  test_output_writer.py  test_profile_store.py  test_prompt_renderer.py  test_real_api_smoke.py  test_task_planner.py
