[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-image-batch"
version = "0.1.0"
description = "Windows-friendly GUI and CLI batch runner foundation for OpenAI gpt-image-2."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
